# duckdb-tutorial

./: .gitignore  README.md  duckdb_cli.md  duckdb_python_client.ipynb  duckdb_sql_extension.sql  pyproject.toml
