[tool.poetry]
name = "duckdb-demo"
version = "0.1.0"
description = "DuckDB demo for AI sharing session"
authors = ["Anna Jones <anna.jones@frontiersin.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^1.0.0"
fsspec = "^2024.6.1"
gcsfs = "^2024.6.1"
pandas = "^2.2.2"
jupysql = "^0.10.12"
duckdb-engine = "^0.13.1"
polars = "^1.4.1"
dvc = {extras = ["gs"], version = "^3.53.1"}
ipykernel = "^6.29.5"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
